work on adding hox chap 4 centering

--- a/5-example_hox2_popular2.Rmd
+++ b/5-example_hox2_popular2.Rmd
@@ -34,7 +34,10 @@ library(optimx)       # Different optimizers to solve mlm's
 
 ## Background
 
+```{block type='rmdlink', echo=TRUE}
 The text **"Multilevel Analysis: Techniques and Applications, Third Edition"** [@hox2017] has a companion [website](https://multilevel-analysis.sites.uu.nl/) which includes links to all the data files used throughout the book (housed on the [book's GitHub repository](https://github.com/MultiLevelAnalysis)).  
+```
+
 
 The following example is used through out @hox2017's chapater 2.
 
