add summary boxed about centering and standardizing variables

--- a/07-example_finch_read.Rmd
+++ b/07-example_finch_read.Rmd
@@ -1102,7 +1102,7 @@ texreg::screenreg(list(fit_read_9ml, fit_read_10ml, fit_read_9ml_c, fit_read_10m
 ```
 
 
-```{r, include=FALSE}
+```{r, results='asis'}
 # Knit to Website: texreg::htmlreg()
 # Knit to PDF:     texreg::texreg()
 # View on Screen:  texreg::screenreg()
@@ -1286,7 +1286,7 @@ anova(fit_read_10ml_s, fit_read_11ml_s, fit_read_12ml_s)
 There is evidence that SES moderates the main effect of vocabualry, after accounting for the interaction between age and vocabulary.
 
 
-### Final Model
+## Final Model
 
 Always refit the final model via REML.
 
