delete space on last line of the autistm dataset

--- a/15-exercise_diet.Rmd
+++ b/15-exercise_diet.Rmd
@@ -1,4 +1,4 @@
-# Introduction to Longitudinal: Exercise and Diet Example
+# RCT Longitudinal: Exercise and Diet Example
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
