adding longitudinal examples

--- a/11-example_autism.Rmd
+++ b/11-example_autism.Rmd
@@ -33,8 +33,11 @@ library(effects)
 
 
 ```{r}
-data_raw <- read.table("https://raw.githubusercontent.com/CEHS-research/eBook_multilevel/master/data/exercise_diet.txt?token=AScXBcNdbT5roh2XgMae-6vm1fruDo8Bks5bvQJIwA%3D%3D",
-                  header = TRUE, 
-                  sep = ",")
+data_raw <- read.table("https://raw.githubusercontent.com/CEHS-research/eBook_multilevel/master/data/autism.txt?token=AScXBXahjPlTjqc6ytn9y6vwkwC6D09nks5bvSeiwA%3D%3D",
+                  header = TRUE)
 ```
 
+
+```{r}
+tibble::glimpse(data_raw)
+```
