--- a/book.bib
+++ b/book.bib
@@ -45,3 +45,26 @@
   year={2008},
   publisher={Wiley Online Library}
 }
+
+@article{anderson2007,
+  title={Patterns of growth in verbal abilities among children with autism spectrum disorder.},
+  author={Anderson, Deborah K and Lord, Catherine and Risi, Susan and DiLavore, Pamela S and Shulman, Cory and Thurm, Audrey and Welch, Kathleen and Pickles, Andrew},
+  journal={Journal of consulting and clinical psychology},
+  volume={75},
+  number={4},
+  pages={594},
+  year={2007},
+  publisher={American Psychological Association}
+}
+
+
+@article{anderson2009,
+  title={Patterns of growth in adaptive social abilities among children with autism spectrum disorders},
+  author={Anderson, Deborah K and Oti, Rosalind S and Lord, Catherine and Welch, Kathleen},
+  journal={Journal of abnormal child psychology},
+  volume={37},
+  number={7},
+  pages={1019--1034},
+  year={2009},
+  publisher={Springer}
+}
